# RayMarchingEngine

./: CMakeLists.txt
include/: App.h  InputManager.h  Object.h  Triangle.h
src/: App.cpp  Triangle.cpp
